adds sample styling files

--- a/public/theme/scss/components/_navbar.scss
+++ b/public/theme/scss/components/_navbar.scss
@@ -1,9 +1,9 @@
-@mixin login {
+@mixin navbar {
     html {
         body {
             #root {
-                width: 100%;
+                
             }
         }
-    }
+    }    
 }
