--- a/public/styles/css/styles.css
+++ b/public/styles/css/styles.css
@@ -44,4 +44,11 @@ html body #root .login-form button:hover {
   color: #4699b3;
 }
 
+html body #root .container-fluid .tab-content .tab-pane {
+  border-right: solid 1px transparent;
+  border-left: solid 1px transparent;
+  border-bottom: solid 1px transparent;
+  border-color: #dee2e6;
+}
+
 /*# sourceMappingURL=styles.css.map */
