--- a/public/styles/scss/styles.scss
+++ b/public/styles/scss/styles.scss
@@ -1,5 +1,7 @@
 @import "components/login";
 @import "components/navbar";
+@import "components/user-list";
 
 @include login;
 @include navbar;
+@include user-list;
