--- a/public/styles/css/styles.css
+++ b/public/styles/css/styles.css
@@ -82,4 +82,47 @@ html body div.modal div.modal-dialog .modal-content .modal-body .user-form form.
   margin-bottom: 20px;
 }
 
+html body .register-form form.registerForm .register-form-fields {
+  max-width: 500px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 20px;
+}
+html body .register-form form.registerForm .register-form-fields label,
+html body .register-form form.registerForm .register-form-fields input {
+  display: block;
+  width: 100%;
+}
+html body .register-form form.registerForm .register-form-fields label {
+  margin-bottom: 5px;
+  height: 22px;
+}
+html body .register-form form.registerForm .register-form-fields input {
+  margin-bottom: 20px;
+  padding: 10px;
+  border-radius: 3px;
+  border: 1px solid #777;
+}
+html body .register-form form.registerForm .register-form-fields input.error {
+  border-color: red;
+}
+html body .register-form form.registerForm .register-form-fields .input-feedback {
+  color: #eb3636;
+  margin-top: -15px;
+  font-size: 14px;
+  margin-bottom: 20px;
+}
+html body .register-form form.registerForm .register-form-fields button {
+  padding: 10px 15px;
+  background-color: #4699b3;
+  color: white;
+  border: 1px solid #4699b3;
+  background-color: 250ms;
+}
+html body .register-form form.registerForm .register-form-fields button:hover {
+  cursor: pointer;
+  background-color: white;
+  color: #4699b3;
+}
+
 /*# sourceMappingURL=styles.css.map */
