--- a/public/styles/css/styles.css
+++ b/public/styles/css/styles.css
@@ -1,3 +1,4 @@
+/* This file contains all application-wide CSS variables. */
 html body #root .login-form h1 {
   text-align: center;
 }
@@ -42,6 +43,83 @@ html body #root .login-form button:hover {
   cursor: pointer;
   background-color: white;
   color: #4699b3;
+}
+html body #login-popover .popover-body form.loginForm {
+  max-width: 500px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 20px;
+}
+html body #login-popover .popover-body form.loginForm .form__field-wrapper {
+  width: 100%;
+  position: relative;
+  padding-top: 1.75em;
+  border-top: 1px solid #EDEDED;
+  border-bottom: 1px solid #EDEDED;
+  background-color: #fff;
+}
+html body #login-popover .popover-body form.loginForm .form__field-wrapper + .form__field-wrapper {
+  border-top: none;
+}
+html body #login-popover .popover-body form.loginForm .form__field-input:focus ~ .form__field-label {
+  color: #666;
+  background-color: #EDEDED;
+}
+html body #login-popover .popover-body form.loginForm .form__field-input:focus {
+  background-color: #EDEDED;
+  color: #333;
+}
+html body #login-popover .popover-body form.loginForm .form__field-label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 16px;
+  padding-top: 20px;
+  padding-bottom: 0;
+  margin: 0;
+  z-index: 1;
+  font-size: 0.8em;
+  color: #999;
+  font-weight: 400;
+  user-select: none;
+  cursor: text;
+}
+html body #login-popover .popover-body form.loginForm .form__field-input {
+  position: relative;
+  padding: 1.5em 16px 0.5em;
+  width: 100%;
+  color: #666;
+  border: none;
+  outline: 0;
+  letter-spacing: 0.05em;
+}
+html body #login-popover .popover-body form.loginForm .form__submit-btn-wrapper {
+  padding: 2em 1em;
+  width: 100%;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+}
+html body #login-popover .popover-body form.loginForm .form__submit-btn {
+  border: none;
+  background-color: #fff;
+  border: 1px solid #6CC0E5;
+  padding: 0.5em 1em;
+  border-radius: 3px;
+  background-color: #6CC0E5;
+  color: white;
+  display: block;
+  margin: 0 auto;
+  position: relative;
+}
+html body #login-popover .popover-body input.error {
+  border-color: red;
+}
+html body #login-popover .popover-body .input-feedback {
+  color: #eb3636;
+  font-size: 14px;
+  padding: 0.5em 16px 1.5em;
 }
 
 html body #root .container-fluid .tab-content .tab-pane {
