--- a/public/styles/scss/components/_navbar.scss
+++ b/public/styles/scss/components/_navbar.scss
@@ -2,7 +2,22 @@
     html {
         body {
             #root {
-                
+                // .navbar {
+                //     #basic-navbar-nav {
+                //         ul.navbar-nav {
+                //             li.nav-item {
+                //                 button.nav-link:focus {
+                //                     outline:0 !important;
+                //                 }
+
+                //                 button.nav-link:active {
+                //                     outline: none;
+                //                     border: none;
+                //                 }
+                //             }
+                //         }
+                //     }
+                // }
             }
         }
     }    
