--- a/public/styles/scss/styles.scss
+++ b/public/styles/scss/styles.scss
@@ -1,3 +1,4 @@
+@import "../../../node_modules/@coreui/coreui/scss/coreui";
 @import "components/login";
 @import "components/navbar";
 @import "components/user-list";
