removes transform property

--- a/public/styles/scss/components/_login.scss
+++ b/public/styles/scss/components/_login.scss
@@ -62,7 +62,7 @@
             }
 
             #login-popover {
-                transform: translate(990px, 56px) !important;
+                // transform: translate(990px, 56px) !important;
                 max-width: 350px;
 
                 .popover-body {
