--- a/public/styles/scss/components/_navbar.scss
+++ b/public/styles/scss/components/_navbar.scss
@@ -18,6 +18,18 @@
                 //         }
                 //     }
                 // }
+
+                .main-container {
+                    #navigation-bar {
+                        .navigation-bar-toolbar {
+                            .navbar-items {
+                                a.navbar-item:hover {
+                                    color: #fff;
+                                }
+                            }
+                        }
+                    }
+                }
             }
         }
     }    
