--- a/public/styles/scss/components/_navbar.scss
+++ b/public/styles/scss/components/_navbar.scss
@@ -21,7 +21,7 @@
 
                 .main-container {
                     #navigation-bar {
-                        .navigation-bar-toolbar {
+                        #navigation-bar-toolbar {
                             a.navbar-brand:hover, a.navbar-brand {
                                 color: #fff;
                             }
