adds text decor none

--- a/public/styles/scss/components/_navbar.scss
+++ b/public/styles/scss/components/_navbar.scss
@@ -24,6 +24,7 @@
                         #navigation-bar-toolbar {
                             a.navbar-brand:hover, a.navbar-brand {
                                 color: #fff;
+                                text-decoration: none;
                             }
                             .navbar-items {
                                 a.navbar-item:hover {
