--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -148,6 +148,7 @@ html body #login-popover .popover-body .input-feedback, html body #login-popover
 
 html body #root .main-container #navigation-bar #navigation-bar-toolbar a.navbar-brand:hover, html body #root .main-container #navigation-bar #navigation-bar-toolbar a.navbar-brand {
   color: #fff;
+  text-decoration: none;
 }
 html body #root .main-container #navigation-bar #navigation-bar-toolbar .navbar-items a.navbar-item:hover {
   color: #fff;
