adds styling for the not found page

--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -235,4 +235,37 @@ html body .register-form form.registerForm .register-form-fields button:hover {
   color: #4699b3;
 }
 
+html body #root .main-container main .FourOhFour {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: #121212;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+html body #root .main-container main .FourOhFour .bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
+  mix-blend-mode: overlay;
+}
+html body #root .main-container main .FourOhFour .code {
+  font-family: "Alfa Slab One", cursive;
+  font-size: 144px;
+  height: 100vh;
+  color: white;
+  width: 100%;
+  display: flex;
+  background-position: center;
+  align-items: center;
+  background-size: cover;
+  justify-content: center;
+}
+
 /*# sourceMappingURL=styles.css.map */
