--- a/src/styles/scss/components/_user-list.scss
+++ b/src/styles/scss/components/_user-list.scss
@@ -2,13 +2,91 @@
     html {
         body {
             #root {
-                .container-fluid {
-                    .tab-content {
-                        .tab-pane {
-                            border-right: solid 1px transparent;
-                            border-left: solid 1px transparent;
-                            border-bottom: solid 1px transparent;
-                            border-color: #dee2e6;
+                .main-container {
+                    main {
+                        #user-container {
+                            .tabs {
+                                // position: relative;
+                                // background: white;
+                                // padding: 50px;
+                                // box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+                                // border-radius: 5px;
+                                // min-width: #{3 * 60px};
+
+                                ul li label {
+                                    font-family: "Montserrat";
+                                    font-weight: bold;
+                                    font-size: 18px;
+                                    color: #428BFF;
+                                }
+
+                                ul li.active label {
+                                    color: #fff;
+                                }
+
+                                ul li.active {
+                                    .indicator {
+                                        position: relative;
+                                        width: 50px;
+                                        max-width: 100%;
+                                        margin: 0 auto;
+                                        height: 4px;
+                                        background: #fff;
+                                        border-radius: 1px;
+                                    }
+                                }
+
+                                ul li.inactive {
+                                    .indicator {
+                                        position: relative;
+                                        width: 50px;
+                                        max-width: 100%;
+                                        margin: 0 auto;
+                                        height: 4px;
+                                        background: #929daf;
+                                        border-radius: 1px;
+                                    }
+                                }
+
+                                ul {
+                                    list-style-type: none;
+                                    padding-left: 0;
+                                    display: flex;
+                                    flex-direction: row;
+                                    margin-bottom: 10px;
+                                    justify-content: space-between;
+                                    align-items: flex-end;
+                                    flex-wrap: wrap;
+                                    
+                                    li {
+                                        box-sizing: border-box;
+                                        flex: 1;
+                                        padding: 5px;
+                                        text-align: center;
+
+                                        label {
+                                            transition: all 0.3s ease-in-out;
+                                            color: desaturate(#428BFF, 85%);
+                                            padding: 5px auto;
+                                            overflow: hidden;
+                                            text-overflow: ellipsis;
+                                            display: block;
+                                            cursor: pointer;
+                                            transition: all 0.2s ease-in-out;
+                                            white-space: nowrap;
+                                            -webkit-touch-callout: none;
+                                        }
+                                    }
+                                }
+                            }
+
+                            .content {
+                                position: relative;
+                                background: white;
+                                box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+                                border-radius: 5px;
+                                min-width: #{3 * 60px};
+                            }
                         }
                     }
                 }
